# jackmididrummer

./: CMakeLists.txt  README  README.md  TODO  TODO.md  amd.cpp  application.cpp  application.h  config.cpp  config.example  config.h  log.h  loop.cpp  loop.h  midi.h
src/: amd.cpp  application.cpp  application.h  beat.h  config.cpp  config.h  delegate.h  drummer.cpp  drummer.h  jacker.cpp  jacker.h  log.h  loop.cpp  loop.h  loopmgr.cpp  loopmgr.h  midi.h  notemap.cpp  notemap.h  outputmap.cpp  outputmap.h  reactmgr.cpp  reactmgr.h  types.cpp  types.h
